# practice0000001-classroom-ba35f0-classroom_code_2-classroom_code

./: CMakeLists.txt  Makefile  README.md
server/: package-lock.json  package.json  server.mjs
src/: calculator.cpp
tests/: test_calculator.cpp
web/: index.html  script.js
workflows/: ci.yml
